--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 Current or previous core committers
 
-* TODO: Add core committers
+* Tobias Lorenz (tobias.lorenz@bitmazk.com)
 
 Contributors (in alphabetical order)
 
